Begin work on UI. Update project titles.

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <title>Super Galactic Age Calculator</title>
 </head>
 <body>
+
+  <div id="greeting" class="container">
+    <h1>Welcome to the Super Galactic Age Calculator</h1>
+  </div>
+
+  <div id="form-div" class="form container">
+    <form id="user-age-input">
+      <label for="age">Enter your age:</label>
+      <br />
+      <input type="number" name="user-age" id="user-age">
+      <br />
+      <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+  </div>
+  
+  <div>
+    <h5> Results: </h5>
+  </div>
   
 </body>
 </html>
