Add div containers to display submission results.

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,48 @@
   <div id="form-div" class="form container">
     <form id="user-age-input">
       <label for="age">Enter your age:</label>
-      <br />
       <input type="number" name="user-age" id="user-age">
-      <br />
       <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
   
-  <div>
-    <h5> Results: </h5>
+  <div class="container">
+    <h3> Planets: </h3>
   </div>
-  
+
+  <div class="row justify-content-around container">
+    <div class="col">
+      <h4> Mercury: </h4>
+      <div id="Mercury"></div>
+    </div>
+
+    <div class="col">
+      <h4> Venus: </h4>
+      <div id="Venus"></div>
+    </div>
+
+    <div class="col">
+      <h4> Earth: </h4>
+      <div id="Earth"></div>
+    </div>
+  </div>
+
+  <div class="row justify-content-around container">
+    <div class="col">
+      <h4> Mars: </h4>
+      <div id="Mars"></div>
+    </div>
+
+    <div class="col">
+      <h4> Jupiter: </h4>
+      <div id="Jupiter"></div>
+    </div>
+
+    <div class="col">
+      <h4> Planet Dog: </h4>
+      <div id="misc"></div>
+    </div>
+  </div>
+
 </body>
 </html>
