Update UI display results & simple styles.

--- a/src/index.html
+++ b/src/index.html
@@ -24,36 +24,31 @@
   </div>
 
   <div class="row justify-content-around container">
-    <div class="col">
+    <div class="col container">
       <h4> Mercury: </h4>
       <div id="Mercury"></div>
     </div>
 
-    <div class="col">
+    <div class="col container">
       <h4> Venus: </h4>
       <div id="Venus"></div>
     </div>
 
-    <div class="col">
+    <div class="col container">
       <h4> Earth: </h4>
       <div id="Earth"></div>
     </div>
   </div>
 
   <div class="row justify-content-around container">
-    <div class="col">
+    <div class="col-4 container">
       <h4> Mars: </h4>
       <div id="Mars"></div>
     </div>
 
-    <div class="col">
+    <div class="col-4 container">
       <h4> Jupiter: </h4>
       <div id="Jupiter"></div>
-    </div>
-
-    <div class="col">
-      <h4> Planet Dog: </h4>
-      <div id="misc"></div>
     </div>
   </div>
 
