--- a/src/index.html
+++ b/src/index.html
@@ -24,29 +24,29 @@
   </div>
 
   <div class="row justify-content-around container">
-    <div class="col container">
+    <div class="col-3 container phone-stack">
       <h4> Mercury: </h4>
       <div id="Mercury"></div>
     </div>
 
-    <div class="col container">
+    <div class="col-3 container phone-stack">
       <h4> Venus: </h4>
       <div id="Venus"></div>
     </div>
 
-    <div class="col container">
+    <div class="col-3 container phone-stack">
       <h4> Earth: </h4>
       <div id="Earth"></div>
     </div>
   </div>
 
-  <div class="row justify-content-around container">
-    <div class="col-4 container">
+  <div class="row justify-content-around container phone-stack">
+    <div class="col-4 container phone-stack">
       <h4> Mars: </h4>
       <div id="Mars"></div>
     </div>
 
-    <div class="col-4 container">
+    <div class="col-4 container phone-stack">
       <h4> Jupiter: </h4>
       <div id="Jupiter"></div>
     </div>
