--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </div>
   
   <div class="container">
-    <h3> Planets: </h3>
+    <h3>The Planets:</h3>
   </div>
 
   <div class="row justify-content-around container">
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <div class="row justify-content-around container phone-stack">
+  <div class="row justify-content-around container">
     <div class="col-4 container phone-stack">
       <h4> Mars: </h4>
       <div id="Mars"></div>
