Change input size. UI is WIP.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <form id="user-age-input">
       <label for="age">Enter your age:</label>
       <input type="number" name="user-age" id="user-age">
-      <button class="btn btn-primary" type="submit">Submit</button>
+      <button class="btn btn-secondary" type="submit">Submit</button>
     </form>
   </div>
   
