--- a/src/index.html
+++ b/src/index.html
@@ -41,14 +41,18 @@
   </div>
 
   <div class="row justify-content-around container">
-    <div class="col-4 container phone-stack">
+    <div class="col-3 container phone-stack">
       <h4> Mars: </h4>
       <div id="Mars"></div>
     </div>
 
-    <div class="col-4 container phone-stack">
+    <div class="col-3 container phone-stack">
       <h4> Jupiter: </h4>
       <div id="Jupiter"></div>
+    </div>
+
+    <div class="col-3 container phone-stack">
+      <div id="misc"></div>
     </div>
   </div>
 
