Add and style image assets.

--- a/src/index.html
+++ b/src/index.html
@@ -25,29 +25,35 @@
 
   <div class="row justify-content-around container">
     <div class="col-3 container phone-stack">
-      <h4> Mercury: </h4>
+      <img src="./assets/images/mercury-64.png" alt="planet earth">
+      <h4> Mercury </h4>
       <div id="Mercury"></div>
     </div>
 
     <div class="col-3 container phone-stack">
-      <h4> Venus: </h4>
+      <img src="./assets/images/venus-64.png" alt="planet earth">
+      <h4> Venus </h4>
       <div id="Venus"></div>
     </div>
 
     <div class="col-3 container phone-stack">
-      <h4> Earth: </h4>
+      <img src="./assets/images/earth-64.png" alt="planet earth">
+      <h4> Earth </h4>
+      <!-- <img src="./assets/images/earth-64.png" alt="planet earth"> -->
       <div id="Earth"></div>
     </div>
   </div>
 
   <div class="row justify-content-around container">
     <div class="col-3 container phone-stack">
-      <h4> Mars: </h4>
+      <img src="./assets/images/mars-64.png" alt="planet earth">
+      <h4> Mars </h4>
       <div id="Mars"></div>
     </div>
 
     <div class="col-3 container phone-stack">
-      <h4> Jupiter: </h4>
+      <img src="./assets/images/jupiter-64.png" alt="planet earth">
+      <h4> Jupiter </h4>
       <div id="Jupiter"></div>
     </div>
 
