Update input to type='date' instead of 'number'.

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 
   <div id="form-div" class="form container">
     <form id="user-age-input">
-      <label for="age">Enter your age:</label>
-      <input type="number" name="user-age" id="user-age">
+      <label for="age">Enter your birth date:</label>
+      <input type="date" name="user-age" id="user-age">
       <button class="btn btn-secondary" type="submit">Submit</button>
     </form>
   </div>
