Add second date input to utilize yearsDifference.

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,15 @@
 
   <div id="form-div" class="form container">
     <form id="user-age-input">
-      <label for="age">Enter your birth date:</label>
+      <label for="user-age">Enter your birth date:</label>
       <input type="date" name="user-age" id="user-age">
       <button class="btn btn-secondary" type="submit">Submit</button>
+    </form>
+
+    <form id="hidden" class="form2">
+      <label for="other-age">Enter a second birthday:</label>
+      <input type="date" name="other-age" id="other-age">
+      <button class="btn btn-secondary" type="submit">Time Difference</button>
     </form>
   </div>
   
